# Aegis_Q_Cognitive

./: .gitignore  AQC_Investor_Interactive_Demo.ipynb  README.md  pyproject.toml  requirements.txt
.github/workflows/: pqc-compliance-check.yml
docs/: FUNDRAISING_BRIEF.md
knowledge_base/bio_cyber_ontology/: neural_threats.yaml
knowledge_base/compliance_mappings/: nsm10_cnsa2.yaml
src/aqc/: __init__.py  _models.py  akb.py  bci_fhe_mock.py  cbom_generator.py  ci_cd_auditor.py  cli.py  compliance_compiler.py  hndl_analyzer.py  jadc2_segmentation.py  kb_sync.py  q_tunnel_gateway.py  report_pdf.py
src/aqc/agi_interrogator/: __init__.py  interrogation_ui.py  recursive_agent.py  rl_environment.py
src/aqc/knowledge_base/bio_cyber_ontology/: cardiac_threats.yaml
src/aqc/knowledge_base/threat_profiles/: slater_hndl_2026.yaml
src/aqc_api/: __init__.py  main.py
src/aqc_api/routers/: compliance.py
src/aqc_api/services/: pdf_engine.py
tests/: test_agi_interrogator.py  test_akb.py  test_aqc_api.py  test_ci_cd_auditor.py  test_phase2.py  test_report_pdf.py  test_smoke.py
