[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-quantum-cognitive"
version = "0.1.0"
description = "PQC readiness auditor for neural, biometric, and JADC2 fabrics. Defends against Soul Catcher 2.0 (quantum-decrypted brain-print spoofing) and Harvest-Now-Decrypt-Later attacks on BCI telemetry."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Aegis Quantum-Cognitive", email = "ops@aegis-quantum-cognitive.example" },
]
keywords = [
    "pqc",
    "post-quantum",
    "hndl",
    "jadc2",
    "darpa-n3",
    "bci",
    "soul-catcher",
    "cbom",
    "microsegmentation",
    "cybersecurity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "networkx>=3.2",
    "scapy>=2.5",
    "cryptography>=42.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pqc = [
    # liboqs-python is the OQS wrapper for ML-KEM / ML-DSA / SLH-DSA.
    # It requires the system liboqs library at install time.
    "liboqs-python>=0.10.0",
]
render = [
    # Professional PDF export (AQC report bundle). WeasyPrint renders
    # styled HTML; `markdown` is the Markdown fallback when pandoc is
    # not installed (`brew install pandoc` recommended for GFM tables).
    "weasyprint>=62",
    "markdown>=3.5",
]
agi = [
    # Interrogation AGI: Gymnasium bio-cyber env + tabular RL + War Room UI.
    "gymnasium>=0.29",
    "numpy>=1.26",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
aqc = "aqc.cli:main"

[project.urls]
"Homepage" = "https://github.com/AAH20/Aegis_Q_Cognitive"
"Issues"   = "https://github.com/AAH20/Aegis_Q_Cognitive/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aqc = ["knowledge_base/**/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
